fix: issues with spacing and further improvement so that the hero section is always 100vh high

--- a/style.css
+++ b/style.css
@@ -59,13 +59,13 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 5px;
+    padding: 0 20px;
 }
 
 .wrapper-social-media-footer {
     display: flex;
     gap: 40px;
-    padding-right: 50px;
+    padding-right: 30px;
 }
 
 .footer-legal {
