--- a/styles/contact.css
+++ b/styles/contact.css
@@ -6,6 +6,7 @@
     margin-bottom: 20px;
     max-width: 1440px;
     margin: 0 auto;
+    padding: 0 20px;
 }
 
 .wrapper-arrow-up {
