--- a/styles/content_section.css
+++ b/styles/content_section.css
@@ -1,6 +1,7 @@
 .content-wrapper {
     max-width: 1440px;
     margin: 0 auto;
+    padding: 0 20px;
 }
 
 .content-wrapper-projects {
