--- a/styles/hero_section.css
+++ b/styles/hero_section.css
@@ -26,14 +26,12 @@ h1 {
 
 .hero {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
     text-align: center;
-    padding: 40px 30px 0 30px;
+    padding: 40px 0 0 0;
     margin: 0 auto;
     max-width: 1440px;
     width: 100%;
-    max-height: 1440px;
+    max-height: 1900px;
     height: 100vh;
     box-sizing: border-box;
 }
@@ -277,6 +275,7 @@ nav {
     align-items: center;
     max-width: 1440px;
     width: 100%;
+    padding: 0 20px;
 }
 
 .navbar-logo {
