--- a/styles/project_section.css
+++ b/styles/project_section.css
@@ -2,6 +2,8 @@
     display: flex;
     align-items: flex-start;
     max-width: 1440px;
+    width: 100%;
+    
 }
 
 .tab {
