--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,3 +1,9 @@
+@media (max-width: 1500px) {
+    .hero {
+        padding: 40px 20px 0 20px;
+    }
+}
+
 @media (max-width: 1450px) {
     .content-section-body {
         display: flex;
@@ -46,8 +52,27 @@
         font-size: clamp(2rem, 0.86rem + 3.01vw, 3.75rem);
     }
 
-    .hero {
-        height: auto;
+    .profil-img {
+        height: 93%;
+        transform: translate(-50%, -13%);
+        mask-image: url('../assets/img/heroBackground.png');
+        mask-size: 116% auto;
+        mask-repeat: no-repeat;
+        mask-position: bottom;
+    }
+
+    .img-background-default,
+    .img-background-hover {
+        height: 80%;
+        transform: translate(-50%, -16%) rotate(0deg);
+    }
+
+    .main-image-container:hover .img-background-default {
+        opacity: 1;
+    }
+
+    .main-image-container:hover .img-background-hover {
+        opacity: 0;
     }
 
     .wrapper-arrow-down {
@@ -89,6 +114,19 @@
     }
 }
 
+@media (max-width: 1200px) and (min-width: 700px) {
+    .main-image-container {
+        height: 700px;
+    }
+}
+
+@media (max-width: 870px) and (min-width: 700px) {
+    .main-image-container {
+        height: 520px;
+        margin: 80px 0 0 0;
+    }
+}
+
 
 @media (max-width: 1150px) {
     .navbar-language {
@@ -117,33 +155,6 @@
         scroll-margin-top: 80px;
     }
 
-    .info-hero-section {
-        margin-top: clamp(16px, -171.2px + 20.8vw, 68px);
-    }
-
-    .profil-img {
-        height: 93%;
-        transform: translate(-50%, -13%);
-        mask-image: url('../assets/img/heroBackground.png');
-        mask-size: 116% auto;
-        mask-repeat: no-repeat;
-        mask-position: bottom;
-    }
-
-    .img-background-default,
-    .img-background-hover {
-        height: 80%;
-        transform: translate(-50%, -16%) rotate(0deg);
-    }
-
-    .main-image-container:hover .img-background-default {
-        opacity: 1;
-    }
-
-    .main-image-container:hover .img-background-hover {
-        opacity: 0;
-    }
-
     .team-title {
         display: flex;
         flex-direction: column;
@@ -159,12 +170,6 @@
 
     .contact-section {
         padding: 0 20px;
-    }
-}
-
-@media (min-width: 768px) and (max-width: 1180px) and (min-height: 600px) and (max-height: 900px) {
-    .hero {
-        height: 100vh;
     }
 }
 
@@ -188,7 +193,6 @@
     }
 
     .hero {
-        height: 100vh;
         flex-direction: column;
     }
 
